feat: config knex | created first table "transaction", and two migrations

--- a/02-route-http/.gitignore
+++ b/02-route-http/.gitignore
@@ -1,7 +1,7 @@
 # Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
 
 # db
-tmp/app.db
+db/app.db
 
 # dependencies
 node_modules/
