--- a/02-route-http/package.json
+++ b/02-route-http/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
     "knex": "^3.1.0",
+    "pg": "^8.14.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -28,11 +29,11 @@
     "@types/node": "^22.13.13",
     "@types/supertest": "^6.0.3",
     "eslint": "^8.57.1",
+    "sqlite3": "^5.1.7",
     "supertest": "^7.1.0",
     "tsup": "^8.4.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2",
-    "vitest": "^3.0.9",
-    "sqlite3": "^5.1.7"
+    "vitest": "^3.0.9"
   }
 }
