--- a/03-api-solid/package.json
+++ b/03-api-solid/package.json
@@ -13,6 +13,7 @@
     "test:watch": "vitest --project unit",
     "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
     "test:e2e": "vitest run --project e2e",
+    "test:e2e:watch": "vitest run --project e2e",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
   },
@@ -23,11 +24,13 @@
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.13.14",
+    "@types/supertest": "^6.0.3",
     "@vitest/coverage-v8": "^3.1.1",
     "@vitest/ui": "^3.1.1",
     "eslint": "^8.57.1",
     "npm-run-all": "^4.1.5",
     "prisma": "^6.5.0",
+    "supertest": "^7.1.0",
     "tsup": "^8.4.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2",
