--- a/03-api-solid/.github/workflows/run-unit-test.yml
+++ b/03-api-solid/.github/workflows/run-unit-test.yml
@@ -1,18 +1,22 @@
-name: Run unit Tests
+name: Run Unit Tests
 
-on: [push]
+on:
+  push:
+    branches:
+      - "03-api-solid"
+    paths:
+      - "03-api-solid/**"
+  pull_request:
+    branches:
+      - "main"
 
 jobs:
   run-unit-tests:
-    name: Run unit tests
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: 20
-          cache: "npm"
       - run: npm ci
-
       - run: npm run test
