--- a/04-clean-ddd/package.json
+++ b/04-clean-ddd/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^9.7.0",
     "@types/node": "^22.14.0",
     "typescript": "^5.8.3",
     "vite-tsconfig-paths": "^5.1.4",
