--- a/05-nestjs/package.json
+++ b/05-nestjs/package.json
@@ -46,6 +46,7 @@
     "@types/node": "^22.10.7",
     "@types/passport-jwt": "^4.0.1",
     "@vitest/coverage-v8": "^3.1.3",
+    "dotenv": "^16.5.0",
     "eslint": "^8.57.1",
     "globals": "^16.0.0",
     "prisma": "^6.7.0",
